[gd_scene load_steps=3 format=3 uid="uid://r7ubs8piqnii"]

[ext_resource type="Script" path="res://scenes/menu/main/menu.gd" id="1_oj3nu"]
[ext_resource type="Texture2D" uid="uid://bbk7vxjiekenx" path="res://materials/image/treugolnik_minimalizm_chernyj_108815_1680x1050.jpg" id="2_4uk1p"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_oj3nu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -840.0
offset_top = -525.0
offset_right = 840.0
offset_bottom = 525.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4uk1p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -495.0
offset_top = -124.0
offset_right = -270.0
offset_bottom = 34.0
grow_vertical = 2
scale = Vector2(1.33152, 1.33152)

[node name="playButton" type="Button" parent="VBoxContainer"]
modulate = Color(0.359069, 0.359069, 0.359069, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Начать игру"
alignment = 0

[node name="settingsButton" type="Button" parent="VBoxContainer"]
modulate = Color(0.359069, 0.359069, 0.359069, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Настройки
"
flat = true
alignment = 0

[node name="licenseButton" type="Button" parent="VBoxContainer"]
modulate = Color(0.359069, 0.359069, 0.359069, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Авторы
"
flat = true
alignment = 0

[node name="exitButton" type="Button" parent="VBoxContainer"]
modulate = Color(0.359069, 0.359069, 0.359069, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Выход
"
flat = true
alignment = 0

[connection signal="pressed" from="VBoxContainer/playButton" to="." method="_on_play"]
[connection signal="pressed" from="VBoxContainer/settingsButton" to="." method="_on_settings"]
[connection signal="pressed" from="VBoxContainer/licenseButton" to="." method="_on_license"]
[connection signal="pressed" from="VBoxContainer/exitButton" to="." method="_on_exit"]
